# research-digest

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: research-digest.yml
components/: cost_tracker.py
components/agents/: __init__.py  curator_agent.py  research_agents.py  scout_agent.py
components/email/: __init__.py  gmail_sender.py
components/prompts/: __init__.py  curator_agent.py  curator_model.py  research_agents.py  research_models.py  scout_agent.py  scout_model.py
components/tools/: __init__.py  arxiv.py
components/vector_db/: chroma.sqlite3  store.py
data/: __init__.py  content_index.json  content_manager.py  content_saver.py  costs.json  costs_current_run.json  dedup.py  research_items.csv  skipped_items.csv
data/content/: _url_index.json
data/contents/: 0048f13e4d6b5759.md  019a8a723759388c.md  01d6c3335fa07000.md  067cd996b5947d4e.md  06c198e32488f738.md  0736b731de26ba09.md  076c89389bf2e566.md  08d3957ccd4543ec.md  08e81a39b6fe1237.md  09e8885a632f4ea1.md  0a6e95bba417da68.md  0af2f6208bfd4400.md  0b5be6392d50ed99.md  0bd31ffb524904b4.md  0d2f15aa306704a8.md  0d4c76e5626c3800.md  0d4ffb36138e02f6.md  0da0f874760926a5.md  0e581a4d97fce5ce.md  0ff124b6f9f22ae5.md  101f627b4c4c972e.md  145d1c6f81853c0a.md  14992dbcd50e2c85.md  165d5a5032c43e97.md  16e294ba25e97dcd.md  17f68dccc8c8be9c.md  181f994677267ac9.md  197413759250c467.md  1b711d553a369e37.md  1c347aa37cead995.md  1c547c94d84f7360.md  1e11e1675d9c2ba6.md  1f154dfd4a99cbe8.md  1f9c12ca58feb2b7.md  1fb530e90c553ade.md  1fd425c989155561.md  204b260d2cc915d5.md  21f7f5bbdcfa8d88.md  228b5578101a678d.md  24c3bac5fc11857d.md  (+201 more)
nbs/: 01_research.ipynb  02_scouting.ipynb  03_load_content.ipynb  04_curation.ipynb  05_digest.ipynb  test-agents-sdk.ipynb  test-connections.ipynb  test-vectordb.ipynb  tests.ipynb
scripts/: 01_research.py  02_scouting.py  03_load_content.py  04_curation.py  05_digest.py  run_pipeline.py
(+10 files in other folders)
