[project]
name = "research-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=1.4.0",
    "claude-agent-sdk>=0.1.18",
    "dotenv>=0.9.9",
    "exa-py>=2.0.2",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "limiter>=0.5.0",
    "markdown>=3.10",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "pandas>=2.3.3",
    "pymupdf>=1.26.7",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "voyageai>=0.3.7",
]
